@@ -1,3 +1,9 @@
+2010-04-02  Dan Rosenberg  <dan.j.rosenberg@gmail.com>  (tiny change)
+
+	* movemail.c (main): Check return values of setuid.  Avoid
+	possibility of symlink attack when movemail is setgid mail
+	(CVE-2010-0825).
+
 2010-03-19  Tetsurou Okazaki  <okazaki@be.to>  (tiny change)
 
 	* Makefile.in (uninstall): Handle the case where archlibdir does
